# HumansVsBeast

./: CMakeLists.txt  README.md  beast.c  beast.h  beast_behaviour.c  beast_behaviour.h  client.c  client_utils.c  client_utils.h  common.c  common.h  default_map.txt  dfs.c  dfs.h  game.c  game.h  main.c  map.c  map.h  map.map  player.c  player.h  server.c  socket.c  socket.h  threads.h  utils.c  utils.h
